build/front-envoy/front-envoy.yaml
static_resources:
 listeners:
   - address:
       socket_address:
         address: 0.0.0.0
         port_value: 80
     filter_chains:
       - filters:
           - name: envoy.http_connection_manager
             config:
               tracing:
                 operation_name: egress
               access_log:
                 - name: envoy.file_access_log
                   config:
                     path: /dev/stdout
                     format: "[ACCESS_LOG][%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" \"%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%\"\n"
               codec_type: auto
               generate_request_id: true
               stat_prefix: ingress_http
               route_config:
                 name: local_route
                 virtual_hosts:
                   - name: backend
                     domains:
                       - "*"
                     routes:
                       - match:
                           prefix: "/"
                         route:
                           cluster: hotel
               http_filters:
                 - name: envoy.router
                   config: {}
 clusters:
   - name: hotel
     connect_timeout: 5s
     type: strict_dns
     lb_policy: round_robin
     http2_protocol_options: {}
     hosts:
       - socket_address:
           address: hotel
           port_value: 8081
   - name: jaeger
     connect_timeout: 1s
     type: strict_dns
     lb_policy: round_robin
     hosts:
       - socket_address:
           address: zipkin
           port_value: 9411
tracing:
  http:
    name: envoy.zipkin
    config:
      collector_cluster: jaeger
      collector_endpoint: "/api/v1/spans"
      shared_span_context: false
admin:
 access_log_path: "/dev/null"
 address:
   socket_address:
     address: 0.0.0.0
     port_value: 8001
